# airquality

./: .dockerignore  Dockerfile  backoff.py  database_service.py  docker-compose.yml  main.py  mqtt.py  pyproject.toml  recalibrate_s8.py  rpi_setup.txt  screen.py
.github/workflows/: ci.yaml
sensors/: bme280.py  bme280_sensor.py  ltr559.py  mics6814.py  pms7003.py  s8.py  sensor.py
